--- a/index.html
+++ b/index.html
@@ -1,32 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Homepage</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Canvas with Background</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="fade-overlay"></div>
 
-    <!-- Canvas (16:10 ratio, background fills it) -->
-    <div id="game-container">
-        <!-- Buttons -->
-        <div id="buttons">
-            <img id="play-button" src="play.png" alt="Play">
-            <img id="instructions-button" src="how.png" alt="Instructions">
-        </div>
+<!-- Modal popup with the image that the user must close -->
+<div id="popup" class="popup">
+  <img src="load.gif" alt="Click to enter" id="popup-image">
+</div>
 
-        <!-- Instructions Popup (Image) -->
-        <div id="instructions-popup">
-            <img id="instructions-image" src="how3.png" alt="Instructions">
-            <span id="close-btn">&times;</span>
-        </div>
+<!-- Audio element for background music -->
+<audio id="background-music" loop>
+  <source src="music/desert.mp3" type="audio/mp3">
+  <source src="music/desert.ogg" type="audio/ogg">
+  Your browser does not support the audio element.
+</audio>
 
-        <!-- Tumbleweed Container -->
-        <div id="tumbleweed-container"></div>
-    </div>
+<!-- Canvas content which will be shown after modal is closed -->
+<div id="canvas-container" class="hidden">
+  <canvas id="myCanvas"></canvas>
+</div>
 
-    <script src="script.js"></script>
+<!-- Original Play Button -->
+<div id="button-container">
+    <img id="action-button" src="play.png" alt="Play Button">
+  </div>
+  
+  <!-- New Buttons (how.png and credits.png) -->
+  <div id="additional-buttons-container">
+    <!-- 'How' Button -->
+    <img id="how-button" src="how.png" alt="How Button">
+  
+    <!-- 'Credits' Button -->
+    <img id="credits-button" src="credits.png" alt="Credits Button">
+  </div>
+  
+  <!-- Pop-up Modal for 'How' -->
+  <div id="how-popup" class="popup hidden">
+    <img src="how2.png" alt="How Image" id="how-popup-image">
+    <button id="how-close-button" class="close-button">X</button>
+  </div>
+  
+  <!-- Pop-up Modal for 'Credits' -->
+  <div id="credits-popup" class="popup hidden">
+    <img src="credits2.png" alt="Credits Image" id="credits-popup-image">
+    <button id="credits-close-button" class="close-button">X</button>
+  </div>
+  
+  
+
+<!-- Fade-out div (covers the entire screen) -->
+<div id="fade-to-black"></div>
+
+  <!-- Background Music -->
+  <audio id="background-music" loop>
+    <source src="music/desert.mp3" type="audio/mp3">
+  </audio>
+  
+  <!-- Sounds -->
+  <audio id="hover-sound">
+    <source src="sounds/hover.mp3" type="audio/mp3">
+  </audio>
+  <audio id="click-sound">
+    <source src="sounds/play.wav" type="audio/mp3">
+  </audio>
+  
+
+<script src="script.js"></script>
+
 </body>
 </html>
